--- a/mailing.html
+++ b/mailing.html
@@ -9,13 +9,15 @@
     <div class="w-full md:w-2/3 flex flex-col mb-16 items-center text-center">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">PeerAdmit DataStream Free Subscription</h1>
       <p class="mb-8 leading-relaxed">Information Delivered. Fast. Quick. No Spam</p>
-      <div class="flex w-full justify-center items-end">
+      <form class="bg-white rounded px-8 pt-6 pb-8 mb-4" method="post" action="/idk">
+        <div class="flex w-full justify-center items-end">
         <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4 md:w-full text-left">
           <label for="hero-field" class="leading-7 text-sm text-gray-600">Email Address</label>
           <input type="text" id="hero-field" name="hero-field" class="w-full bg-gray-100 bg-opacity-50 rounded focus:ring-2 focus:ring-blue-200 focus:bg-transparent border border-gray-300 focus:border-blue-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
         </div>
-        <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Sign Me Up!</button>
-      </div>
+        <button type="submit" class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Sign Me Up!</button>
+      </div>    
+      </form>
       <p class="text-sm mt-2 text-gray-500 mb-8 w-full">Only the most important information. We hate spam as much as you do.</p>
     </div>
   </div>
