--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="content">
               <h3>Our Vision</h3>
               <p>
-                In the current admissions consulting landscape, most if not all services are pushing bundles, packages and money-making schemes. Most counsellors in these corporation are not US/UK educated at the undergraduate level.
+                In the current admissions consulting landscape, most if not all services are pushing bundles, packages and money-making schemes. Most counsellors in these corporation are not US/UK educated at the undergraduate level, or are not recent graduates so as to understand the current landscape.
               </p>
               <a href="#features" class="about-btn">Features <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -95,23 +95,23 @@
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
-                  <h4>Young Counsellors</h4>
-                  <p>Our network of established students can have a much greater impact on you than a middle-aged man.</p>
+                  <h4>Current Undergraduates</h4>
+                  <p>We are undergraduate students that have gone through the college admissions process recently, and have a good idea of what it takes to cut it in today’s world and competitive playing field. We also understand the opinions and feelings of students that we feel many college counsellors are oblivious to.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Affordable Rates</h4>
-                  <p>We don't run with an excessive money-making agenda, a lot of our charging is flexible and pro-bono.</p>
+                  <h4>Standardised Testing</h4>
+                  <p>Tutoring is more expensive than ever before, with large companies charging upto $5000 for 20 hours of tutoring. Having scored in the 99th percentile in these tests ourselves without outside help, we have free, honest tips and tricks to help you achieve your desired score</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
                   <h4>No Sugarcoating</h4>
-                  <p>We speak the truth. We aren't in the business of minting money, giving false-hope and not delivering.</p>
+                  <p>College consulting companies tend to oversell some parts of the application that they have special services for to ensure that you’re trapped in their web of spending money. We don’t do that, and give you the brutal honest truth and ways you can feasibly improve your application.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Feel Free</h4>
-                  <p>Since many of our counsellors are students themselves, they can do a much better job at managing insecurities.</p>
+                  <h4>Diverse Backgrounds</h4>
+                  <p>We are international students who come from all walks of life and from around the world. Our diversity allows us to cater our services to you, wherever you are in the world.</p>
                 </div>
               </div>
             </div><!-- End .content-->
