--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/team-1.png" class="img-fluid" alt="">
+              <img src="assets/img/team/team-sumuk.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>John Doe</h4>
-                  <span>Chief John Officer</span>
+                  <h4>Sumuk Shashidhar</h4>
+                  <span>US Specialist | UIUC | CS</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -346,8 +346,8 @@
               <img src="assets/img/team/team-1.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Jaan Doe</h4>
-                  <span>Jahn Manager</span>
+                  <h4>Kushal Thaman</h4>
+                  <span>UK Specialist | Cambridge University | Physics</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -364,8 +364,8 @@
               <img src="assets/img/team/team-1.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Jean Dough</h4>
-                  <span>Chief Dough Officer</span>
+                  <h4>Devansh Mendiratta</h4>
+                  <span>Europe Specialist | RWTH Aachen | Mech.E</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -382,8 +382,8 @@
               <img src="assets/img/team/team-1.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Amanda Doughson</h4>
-                  <span>John Officer</span>
+                  <h4>Amitesh Pandey</h4>
+                  <span>Standardized Testing Expert</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
