--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>With each member of our organisation specialising in a different area of college admissions, you can be sure to get the best of what you need. </p>
         </div>
 
         <div class="row">
@@ -343,7 +343,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/team/team-1.png" class="img-fluid" alt="">
+              <img src="assets/img/team/team-kushal.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Kushal Thaman</h4>
@@ -361,7 +361,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <img src="assets/img/team/team-1.png" class="img-fluid" alt="">
+              <img src="assets/img/team/team-devansh.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Devansh Mendiratta</h4>
@@ -379,7 +379,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
-              <img src="assets/img/team/team-1.png" class="img-fluid" alt="">
+              <img src="assets/img/team/team-amitesh.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Amitesh Pandey</h4>
