--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <img src="assets/img/team/team-devansh.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-devansh.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Devansh Mendiratta</h4>
@@ -379,7 +379,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
-              <img src="assets/img/team/team-amitesh.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-amitesh.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Amitesh Pandey</h4>
