--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/team/team-kushal.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-kushal.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Kushal Thaman</h4>
