--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/team-sumuk.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-sumuk.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Sumuk Shashidhar</h4>
