--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
-      <h1 style = "position:relative; margin-bottom:40px;">Peer Admit,<br>Admissions Simplified! </h1>
-      <h2 style = "position:relative; margin-bottom:30px;">We are team of talented youth helping students reach their potential</h2>
+      <h1 style = "position:relative; margin-bottom:40px;">Peer Admit<br>Admissions. Simplified.</h1>
+      <h2 style = "position:relative; margin-bottom:30px;">We are team of talented youth at top universities helping prospective students with the application process to help them reach their potential.</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
       <img style = "max-width:40%" src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
