--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1 style = "position:relative; margin-bottom:40px;">Peer Admit<br>Admissions. Simplified.</h1>
-      <h2 style = "position:relative; margin-bottom:30px;">We are team of talented youth at top universities helping prospective students with the application process to help them reach their potential.</h2>
+      <h2 style = "position:relative; margin-bottom:30px;">Admissions abroad don't have to complicated. We make it happen</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
       <img style = "max-width:40%" src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
@@ -170,9 +170,9 @@
             <img src="assets/img/features-1.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
-            <h3>Negotiable charges with student’s financial condition, less than $150</h3>
+            <h3>Free Content. Now, and forever.</h3>
             <p class="font-italic">
-              Affordable as we may be, we recognise that even our current prices may be a burden for some of you. We take up plenty of our work on a pro-bono basis.
+              We realize the immense financial burden the college admissions can place on families. Wanting a reliable source of information shouldn't add to that.
             </p>
             <ul>
               <li><i class="icofont-check"></i> Incredibly Negotiable </li>
