--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1 style = "position:relative; margin-bottom:40px;">Peer Admit<br>Admissions. Simplified.</h1>
-      <h2 style = "position:relative; margin-bottom:30px;">Admissions abroad don't have to complicated. We make it happen</h2>
+      <h2 style = "position:relative; margin-bottom:30px;">Admissions abroad don't have to complicated: We make it happen.</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
       <img style = "max-width:40%" src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
@@ -175,9 +175,9 @@
               We realize the immense financial burden the college admissions can place on families. Wanting a reliable source of information shouldn't add to that.
             </p>
             <ul>
-              <li><i class="icofont-check"></i> Incredibly Negotiable </li>
-              <li><i class="icofont-check"></i> Available Financial Aid</li>
-              <li><i class="icofont-check"></i> Jaw-droppingly Inexpensive </li>
+              <li><i class="icofont-check"></i> Free Videos </li>
+              <li><i class="icofont-check"></i> High-Quality Blogs</li>
+              <li><i class="icofont-check"></i> Inexpensive Personal Advice </li>
             </ul>
           </div>
         </div>
@@ -187,13 +187,13 @@
             <img src="assets/img/features-2.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
-            <h3>No packages or relentless selling, we don’t push our expensive bundles</h3>
+            <h3>No packages: Open-ended advice which empowers you to take choices for yourself.</h3>
             <p class="font-italic">
               If you have previosuly consulted admissions counsellors, you know what we are referring to. We bring to you personally-tailored, non-packaged services to your disposal.
             </p>
             <p>
               When you only need help with a specific part of your application but the counsellors are willing to do nothing less than a $2000 admissions package, it gets frustrating
-              To handle this specific problem, any of our services can be used in their entirety or in combination as per the need of the student.
+              To handle this specific problem, any of our services can be used in their entirety or in combination as per the need of the student. 
             </p>
           </div>
         </div>
@@ -204,11 +204,11 @@
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
             <h3>All our counsellors have taken on the college admissions process within the last 1-2 years.</h3>
-            <p>It can be incredibly taxing for a student to talk for hours on end with a middle-aged guy about college admissions. Moreover, the admissions process evolves consistently and requires updated knowledge </p>
+            <p>Does the thought of listening to a middle-aged counselor shell out entirely irrelevant advice excite you? Let your peers help you out. </p>
             <ul>
-              <li><i class="icofont-check"></i> Relatable and Friendly Counsellors</li>
-              <li><i class="icofont-check"></i> Up to date knowledge and guidance</li>
-              <li><i class="icofont-check"></i> A Young and Resourceful Team </li>
+              <li><i class="icofont-check"></i> Relatable and Friendly Counselors</li>
+              <li><i class="icofont-check"></i> Up-to-date knowledge and guidance</li>
+              <li><i class="icofont-check"></i> People who actually listen to your wants and needs.</li>
             </ul>
           </div>
         </div>
@@ -233,13 +233,13 @@
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
             <span>02</span>
             <h4>Affordable </h4>
-            <p>Bid adieu to the $2000 essay reviewing anf profile-building schemes. Actually get involved in projects.</p>
+            <p>Bid adieu to the $2000 essay reviewing and profile-building schemes. Affordable-yet-personal advice, guaranteed.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
             <span>03</span>
             <h4>Legit Methods</h4>
-            <p>We can but loathe the shady pay-us-to-get-certificates schemes that inhibit learning and foster a toxic environment</p>
+            <p>As fellow students, we can but loathe the shady pay-us-to-get-certificates schemes that are commonplace today. Legitimate work, legitimate results.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
@@ -251,13 +251,13 @@
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
             <span>05</span>
             <h4>Regular Content</h4>
-            <p>Missed the live-streams? We have you covered. We push out open-access and public content regarding the process regularly.</p>
+            <p>Not a one-hit wonder. Regular, high-quality content to keep you up-to-date with the latest from the world of admissions.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
             <span>06</span>
             <h4>Testing Tips</h4>
-            <p>Standardised Testing is a vital part of an applciation. Implement the strategies that worked for our top-scorers and see the results!</p>
+            <p>Standardised Testing is a vital part of an applciation. Implement the strategies that worked for our top-scorers(all of our counsellors) and see the results!</p>
           </div>
 
         </div>
@@ -294,8 +294,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Outreach</a></h4>
-              <p class="description">Land incredible internships and researche experiences with our vast network of student organisations.</p>
+              <h4 class="title"><a href="">Profile Review</a></h4>
+              <p class="description">Affordable profile reviews with incredibly-specific advice as to how to improve it.</p>
             </div>
           </div>
 
@@ -365,7 +365,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Devansh Mendiratta</h4>
-                  <span>Europe Specialist | RWTH Aachen | Mech.E</span>
+                  <span>Europe Specialist | RWTH Aachen | Comp.E.</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -499,10 +499,10 @@ If you’re a particularly unique situation, and want to get personalised feedba
             <a data-toggle="collapse" href="#faq4" class="collapsed">This is all great, but studying in the abroad is only for the rich, and I'm just a middle-class kid <i class="icofont-simple-up"></i></a>
             <div id="faq4" class="collapse" data-parent=".faq-list">
               <p>
-                Incredibly false! Most of our team has either won hefty scholarships and full-rides (a term which indicates that the university takes care of every single expense you could have), or is taking out small loans to fund their education.
+                Incredibly false! Most of our team has either won hefty scholarships and full-rides (a term which indicates that the university takes care of every single expense you could have), or is taking out easily-paid-back loans to fund their education.
                 
                 
-This is a wrong notion that is brought about by college counsellors to scare you into either not pursuing your dream, or paying them money to help you get into a cheaper university elsewhere.
+This is a wrong notion that is brought about by college counsellors to scare you into either not pursuing your dream, or paying them money to help you get into a cheaper university elsewhere, earning a quick commission off of your admission.
               </p>
             </div>
           </li>
