--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
             <h3>All our counsellors have taken on the college admissions process within the last 1-2 years.</h3>
-            <p>Does the thought of listening to a middle-aged counselor shell out entirely irrelevant advice excite you? Let your peers help you out. </p>
+            <p>Does the thought of listening to a middle-aged counselor shell out entirely irrelevant advice excite you? If not(we hope not!), let your peers help you out. </p>
             <ul>
               <li><i class="icofont-check"></i> Relatable and Friendly Counselors</li>
               <li><i class="icofont-check"></i> Up-to-date knowledge and guidance</li>
