--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1 style = "position:relative; margin-bottom:40px;">Peer Admit<br>Admissions. Simplified.</h1>
-      <h2 style = "position:relative; margin-bottom:30px;">Admissions abroad don't have to complicated: We make it happen.</h2>
+      <h2 style = "position:relative; margin-bottom:30px;">Admissions abroad don't have to be complicated: We make it happen.</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
       <img style = "max-width:40%" src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
