--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <a data-toggle="collapse" class="" href="#faq1">Why Us?<i class="icofont-simple-up"></i></a>
             <div id="faq1" class="collapse show" data-parent=".faq-list">
               <p>
-                Its pretty simple. College consultancies in the world charge outrageous amounts of money. Ranging from a minimum of 1 lakh INR in India, to around 5000 dollars a year in the United States. They also have schemes that enable them to charge you even more. We don’t do that. We’re just students giving you honest advice for free on our YouTube channel and blog. We did the research ourself in our time, scouring the internet and talking to students, and we want to make the process easier for you!
+                It's pretty simple. College consultancies charge outrageous amounts of money: ranging from a minimum of 1 lakh INR in India, to more than 5000 USD a year in the United States- with schemes in place to extract even more money. We don’t do that. We’re just students giving you honest advice for free on our YouTube channel and blog. We did the research ourself in our time, scouring the internet and talking to students, and we want to make the process easier for you!
               </p>
             </div>
           </li>
@@ -490,7 +490,7 @@
                 You CAN do it yourself. That is what we want to help you with. All our content will be free, forever on our youtube channel and blog, and you can extract all the value you want without paying a DIME. We only ask you to share it with others if you find it helpful. We make most of our revenue through ads, only enough to keep us running, and to keep you bringing new and better content.
                 
                 
-If you’re a particularly unique situation, and want to get personalised feedback or guidance from one of our team members, we charge a nominal fee, as we cannot service all requests. However, we will only take your case and charge you if we feel that our videos cannot help you with your situation, else, we’ll just redirect you to the appropriate resources without charging you anything.
+If you have particularly unique situation, and/or want to get personalised feedback or guidance from one of our team members, we charge a nominal fee, as we cannot service all requests. However, we will only take your case and charge you if we feel that our videos cannot help you with your situation, else, we’ll just redirect you to the appropriate resources without charging you anything.
               </p>
             </div>
           </li>
