--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="https://blog.peeradmit.com">Blog</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -68,7 +69,7 @@
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1 style = "position:relative; margin-bottom:40px;">Peer Admit<br>Admissions. Simplified.</h1>
       <h2 style = "position:relative; margin-bottom:30px;">Admissions abroad don't have to be complicated: We make it happen.</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="https://blog.peeradmit.com" class="btn-get-started scrollto">Check out our blog</a>
       <img style = "max-width:40%" src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
 
