--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="https://blog.peeradmit.com" >Blog</a>
+      <a href="https://blog.peeradmit.com" class="get-started-btn scrollto"> Blog </a>
 
     </div>
   </header><!-- End Header -->
