--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MZZ2XSG0XC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MZZ2XSG0XC');
+</script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Peer-Admit - Admissions Consulting</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="A disruptive, economical student based college consulting service" name="description">
+  <meta content="peeradmit PeerAdmit" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -26,13 +35,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Bikin - v2.2.1
-  * Template URL: https://bootstrapmade.com/bikin-free-simple-landing-page-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -558,14 +560,14 @@ This is a wrong notion that is brought about by college counsellors to scare you
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>contact@peeradmit.ninja</p>
+                  <p>peeradmit@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>Can change this to any other</p>
+                  <p>+1-500-500</p>
                 </div>
               </div>
             </div>
@@ -618,11 +620,9 @@ This is a wrong notion that is brought about by college counsellors to scare you
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Peer Admit</h3>
             <p>
-              Banerghatta Road <br>
-              Bengaluru, Haryana 122002<br>
-              India <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> contact@peeradmit.ninja<br>
+              
+              <strong>Instagram:</strong> @peeradmit<br>      
+              <strong>Email:</strong> peeradmit@gmail.com<br>
             </p>
           </div>
 
