--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="content">
               <h3>Our Vision</h3>
               <p>
-                We've experienced traditional college consultants ourselves: we thus know they're not worth anyone's time or money. Who would you trust more - a counselor with no in-field knowledge of the admissions world, or a peer who only recently went through the process?
+                We've experienced traditional college consultants ourselves: we thus know they're not worth anyone's time or money. Who would you trust more - a counselor with no in-field knowledge of the admissions world, or a peer who only recently went through the process? Good advice-always free.
               </p>
               <a href="#features" class="about-btn">Features <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -174,7 +174,7 @@
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
             <h3>Free Content. Now, and forever.</h3>
             <p class="font-italic">
-              We realize the immense financial burden the college admissions can place on families. Wanting a reliable source of information shouldn't add to that.
+              We realize the immense financial burden college admissions can place on families. Wanting a reliable source of information shouldn't add to that.
             </p>
             <ul>
               <li><i class="icofont-check"></i> Free Videos </li>
