--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Peer-Admit - Admissions Consulting</title>
-  <meta content="A disruptive, economical student based college consulting service" name="description">
+  <title>Peer Admit - Admissions Consulting</title>
+  <meta name = "description" content="A disruptive, highly economical student-led and student-run comprehensive college consulting and guidance service to make the process less bizarre and overwhelming for international students." name="description">
   <meta content="peeradmit PeerAdmit" name="keywords">
 
   <!-- Favicons -->
