--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Peer Admit - Admissions Consulting</title>
-  <meta name = "description" content="A disruptive, highly economical student-led and student-run comprehensive college consulting and guidance service to make the process less bizarre and overwhelming for international students." name="description">
+  <meta name = "description" content="A disruptive and economical college consulting service, meant for students, built by students." name="description">
   <meta content="peeradmit PeerAdmit" name="keywords">
 
   <!-- Favicons -->
@@ -98,7 +98,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
                   <h4>Current Undergraduates</h4>
-                  <p>We are undergraduate students that have gone through the college admissions process, and thus know the ins and outs of the process. We've read enough profiles and written enough essays to know what works, and what doesn't.</p>
+                  <p>We are undergraduate students that have gone through the college admissions process, and thus know the ins and outs of the process. We learnt this through a variety of disorganized sources: Our vision now, is to offer you a centralized resource for all your admissions needs.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
