--- a/index.html
+++ b/index.html
@@ -281,15 +281,15 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Sports Recruitment</a></h4>
-              <p class="description">Strategies and Sessions by our counsellors who got recruited by colleges to play for them.</p>
+              <p class="description">Strategies and Sessions by team members who got recruited by colleges to play for them.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Essay Reviewing</a></h4>
-              <p class="description">At $0.01/word, our accomplished writers can review any and/or all your essays for you.</p>
+              <h4 class="title"><a href="">Essay Advice</a></h4>
+              <p class="description">Free content from some of our best writers on our blog and YouTube channel to understand how to structure your essays and get your story across.</p>
             </div>
           </div>
 
@@ -297,7 +297,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Profile Review</a></h4>
-              <p class="description">Affordable profile reviews with incredibly-specific advice as to how to improve it.</p>
+              <p class="description">Pro Bono profile reviews to ensure that you tick all the boxes and don't miss anything in terms of standardised testing, CSS profiles, etc.</p>
             </div>
           </div>
 
@@ -331,7 +331,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Sumuk Shashidhar</h4>
-                  <span>US Specialist | UIUC | CS</span>
+                  <span>USA | UIUC | CS</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -351,7 +351,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Devansh Mendiratta</h4>
-                  <span>Europe Specialist | RWTH Aachen | Comp.E.</span>
+                  <span>Europe | RWTH Aachen | Comp.E.</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -370,7 +370,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Amitesh Pandey</h4>
-                  <span>Standardized Testing Expert</span>
+                  <span>Standardized Testing</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -388,7 +388,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Shadad Hossain</h4>
-                  <span>Middle East Specialist | NYU-AD</span>
+                  <span>Middle East | NYU-AD</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -406,7 +406,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Malikaa Marathe</h4>
-                  <span>Recruitment Expert | CMU | Math</span>
+                  <span>Sports Recruitment | CMU | Math</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
@@ -426,7 +426,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Saumya Tomar</h4>
-                  <span>Essay Review Specialist</span>
+                  <span>Essay Advice and Review</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
