--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Peer Admit - Admissions Consulting</title>
-  <meta name = "description" content="A disruptive and economical college consulting service, meant for students, built by students." name="description">
+  <title>Peer Admit - Admissions, Simplified</title>
+  <meta name = "description" content="A disruptive and economical platform, meant for students applying to college, built by students who have." name="description">
   <meta content="peeradmit PeerAdmit" name="keywords">
 
   <!-- Favicons -->
