--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1 style = "position:relative; margin-bottom:40px;">Peer Admit<br>Admissions. Simplified.</h1>
       <h2 style = "position:relative; margin-bottom:30px;">Admissions abroad don't have to be complicated: We make it happen.</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="./typeform.html" class="btn-get-started scrollto">Get Started</a>
       <img style = "max-width:40%" src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
 
@@ -337,7 +337,6 @@
 
       </div>
     </section><!-- End Services Section -->
-    <div class="typeform-widget" data-url="https://form.typeform.com/to/fXv4q5ov?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
