--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </nav><!-- .nav-menu -->
 
       <a href="https://blog.peeradmit.com" class="get-started-btn scrollto"> Blog </a>
+      <a href="typeform.html" class="get-started-btn scrollto"> Get Started! </a>
 
     </div>
   </header><!-- End Header -->
