--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ This is a wrong notion that is brought about by college counsellors to scare you
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>Bangalore, Sushant Lok, Parwanoo, India</p>
+                  <p>Bangalore, Gurgaon, Parwanoo, India</p>
                 </div>
               </div>
               <div class="col-md-6">
